Entrega 2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracion TkExecute instlist TkDone
Rule 2     programa -> TkExecute instlist TkDone
Rule 3     term -> TkNum
Rule 4     term -> TkIdent
Rule 5     exp_un -> TkResta exp
Rule 6     exp_un -> TkNegacion exp
Rule 7     exp_un -> TkInspeccion exp
Rule 8     exp -> term
Rule 9     exp -> exp_un
Rule 10    exp -> TkParAbre exp TkParCierra
Rule 11    exp -> TkCorcheteAbre exp TkCorcheteCierra
Rule 12    exp -> TkLlaveAbre exp TkLlaveCierra
Rule 13    exp -> exp TkMas exp
Rule 14    exp -> exp TkMult exp
Rule 15    exp -> exp TkMod exp
Rule 16    exp -> exp TkDiv exp
Rule 17    exp -> exp TkResta exp
Rule 18    exp -> TkTrue
Rule 19    exp -> TkFalse
Rule 20    exp -> exp TkIgual exp
Rule 21    exp -> exp TkDesigual exp
Rule 22    exp -> exp TkMenor exp
Rule 23    exp -> exp TkMayor exp
Rule 24    exp -> exp TkMenorIgual exp
Rule 25    exp -> exp TkMayorIgual exp
Rule 26    exp -> exp TkDisyuncion exp
Rule 27    exp -> exp TkConjuncion exp
Rule 28    exp -> exp TkConcat exp
Rule 29    instruccion -> TkIdent TkAsignacion exp
Rule 30    instruccion -> TkRead exp
Rule 31    instruccion -> TkWrite exp
Rule 32    instruccion -> TkWhile exp TkDo instlist TkDone
Rule 33    instruccion -> TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
Rule 34    instruccion -> TkIf exp TkThen instlist TkDone
Rule 35    instruccion -> TkIf exp TkThen instlist TkElse instlist TkDone
Rule 36    instruccion -> declaracion TkExecute instlist TkDone
Rule 37    instruccion -> TkExecute instlist TkDone
Rule 38    instruccion -> TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
Rule 39    ident_tape -> TkCorcheteAbre exp TkCorcheteCierra
Rule 40    ident_tape -> TkIdent
Rule 41    lista_tape -> lista_tape simb_tape
Rule 42    lista_tape -> simb_tape
Rule 43    simb_tape -> TkPunto
Rule 44    simb_tape -> TkMayor
Rule 45    simb_tape -> TkMenor
Rule 46    simb_tape -> TkMas
Rule 47    simb_tape -> TkResta
Rule 48    simb_tape -> TkComa
Rule 49    instlist -> instlist semicoloninst
Rule 50    instlist -> instruccion
Rule 51    semicoloninst -> TkPuntoYComa instruccion
Rule 52    declaracion -> TkDeclare declist
Rule 53    declist -> dec TkPuntoYComa declist
Rule 54    declist -> dec
Rule 55    dec -> varlist TkType tipo
Rule 56    varlist -> TkIdent TkComa varlist
Rule 57    varlist -> TkIdent
Rule 58    tipo -> TkInteger
Rule 59    tipo -> TkBoolean
Rule 60    tipo -> TkTape

Terminals, with rules where they appear

TkAsignacion         : 29
TkAt                 : 38
TkBoolean            : 59
TkComa               : 48 56
TkConcat             : 28
TkConjuncion         : 27
TkCorcheteAbre       : 11 39
TkCorcheteCierra     : 11 39
TkDeclare            : 52
TkDesigual           : 21
TkDisyuncion         : 26
TkDiv                : 16
TkDo                 : 32 33
TkDone               : 1 2 32 33 34 35 36 37
TkElse               : 35
TkExecute            : 1 2 36 37
TkFalse              : 19
TkFor                : 33
TkFrom               : 33
TkIdent              : 4 29 33 40 56 57
TkIf                 : 34 35
TkIgual              : 20
TkInspeccion         : 7
TkInteger            : 58
TkLlaveAbre          : 12 38
TkLlaveCierra        : 12 38
TkMas                : 13 46
TkMayor              : 23 44
TkMayorIgual         : 25
TkMenor              : 22 45
TkMenorIgual         : 24
TkMod                : 15
TkMult               : 14
TkNegacion           : 6
TkNum                : 3
TkParAbre            : 10
TkParCierra          : 10
TkPunto              : 43
TkPuntoYComa         : 51 53
TkRead               : 30
TkResta              : 5 17 47
TkTape               : 60
TkThen               : 34 35
TkTo                 : 33
TkTrue               : 18
TkType               : 55
TkWhile              : 32
TkWrite              : 31
error                : 

Nonterminals, with rules where they appear

dec                  : 53 54
declaracion          : 1 36
declist              : 52 53
exp                  : 5 6 7 10 11 12 13 13 14 14 15 15 16 16 17 17 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 30 31 32 33 33 34 35 39
exp_un               : 9
ident_tape           : 38
instlist             : 1 2 32 33 34 35 35 36 37 49
instruccion          : 50 51
lista_tape           : 38 41
programa             : 0
semicoloninst        : 49
simb_tape            : 41 42
term                 : 8
tipo                 : 55
varlist              : 55 56

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracion TkExecute instlist TkDone
    (2) programa -> . TkExecute instlist TkDone
    (52) declaracion -> . TkDeclare declist

    TkExecute       shift and go to state 2
    TkDeclare       shift and go to state 4

    programa                       shift and go to state 3
    declaracion                    shift and go to state 1

state 1

    (1) programa -> declaracion . TkExecute instlist TkDone

    TkExecute       shift and go to state 5


state 2

    (2) programa -> TkExecute . instlist TkDone
    (49) instlist -> . instlist semicoloninst
    (50) instlist -> . instruccion
    (29) instruccion -> . TkIdent TkAsignacion exp
    (30) instruccion -> . TkRead exp
    (31) instruccion -> . TkWrite exp
    (32) instruccion -> . TkWhile exp TkDo instlist TkDone
    (33) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (34) instruccion -> . TkIf exp TkThen instlist TkDone
    (35) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (36) instruccion -> . declaracion TkExecute instlist TkDone
    (37) instruccion -> . TkExecute instlist TkDone
    (38) instruccion -> . TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
    (52) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 8
    TkRead          shift and go to state 7
    TkWrite         shift and go to state 15
    TkWhile         shift and go to state 9
    TkFor           shift and go to state 10
    TkIf            shift and go to state 6
    TkExecute       shift and go to state 13
    TkLlaveAbre     shift and go to state 14
    TkDeclare       shift and go to state 4

    instruccion                    shift and go to state 11
    instlist                       shift and go to state 12
    declaracion                    shift and go to state 16

state 3

    (0) S' -> programa .



state 4

    (52) declaracion -> TkDeclare . declist
    (53) declist -> . dec TkPuntoYComa declist
    (54) declist -> . dec
    (55) dec -> . varlist TkType tipo
    (56) varlist -> . TkIdent TkComa varlist
    (57) varlist -> . TkIdent

    TkIdent         shift and go to state 19

    varlist                        shift and go to state 18
    dec                            shift and go to state 20
    declist                        shift and go to state 17

state 5

    (1) programa -> declaracion TkExecute . instlist TkDone
    (49) instlist -> . instlist semicoloninst
    (50) instlist -> . instruccion
    (29) instruccion -> . TkIdent TkAsignacion exp
    (30) instruccion -> . TkRead exp
    (31) instruccion -> . TkWrite exp
    (32) instruccion -> . TkWhile exp TkDo instlist TkDone
    (33) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (34) instruccion -> . TkIf exp TkThen instlist TkDone
    (35) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (36) instruccion -> . declaracion TkExecute instlist TkDone
    (37) instruccion -> . TkExecute instlist TkDone
    (38) instruccion -> . TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
    (52) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 8
    TkRead          shift and go to state 7
    TkWrite         shift and go to state 15
    TkWhile         shift and go to state 9
    TkFor           shift and go to state 10
    TkIf            shift and go to state 6
    TkExecute       shift and go to state 13
    TkLlaveAbre     shift and go to state 14
    TkDeclare       shift and go to state 4

    instruccion                    shift and go to state 11
    instlist                       shift and go to state 21
    declaracion                    shift and go to state 16

state 6

    (34) instruccion -> TkIf . exp TkThen instlist TkDone
    (35) instruccion -> TkIf . exp TkThen instlist TkElse instlist TkDone
    (8) exp -> . term
    (9) exp -> . exp_un
    (10) exp -> . TkParAbre exp TkParCierra
    (11) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (12) exp -> . TkLlaveAbre exp TkLlaveCierra
    (13) exp -> . exp TkMas exp
    (14) exp -> . exp TkMult exp
    (15) exp -> . exp TkMod exp
    (16) exp -> . exp TkDiv exp
    (17) exp -> . exp TkResta exp
    (18) exp -> . TkTrue
    (19) exp -> . TkFalse
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp
    (7) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkNum           shift and go to state 26
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 32
    exp_un                         shift and go to state 29

state 7

    (30) instruccion -> TkRead . exp
    (8) exp -> . term
    (9) exp -> . exp_un
    (10) exp -> . TkParAbre exp TkParCierra
    (11) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (12) exp -> . TkLlaveAbre exp TkLlaveCierra
    (13) exp -> . exp TkMas exp
    (14) exp -> . exp TkMult exp
    (15) exp -> . exp TkMod exp
    (16) exp -> . exp TkDiv exp
    (17) exp -> . exp TkResta exp
    (18) exp -> . TkTrue
    (19) exp -> . TkFalse
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp
    (7) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkNum           shift and go to state 26
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 35
    exp_un                         shift and go to state 29

state 8

    (29) instruccion -> TkIdent . TkAsignacion exp

    TkAsignacion    shift and go to state 36


state 9

    (32) instruccion -> TkWhile . exp TkDo instlist TkDone
    (8) exp -> . term
    (9) exp -> . exp_un
    (10) exp -> . TkParAbre exp TkParCierra
    (11) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (12) exp -> . TkLlaveAbre exp TkLlaveCierra
    (13) exp -> . exp TkMas exp
    (14) exp -> . exp TkMult exp
    (15) exp -> . exp TkMod exp
    (16) exp -> . exp TkDiv exp
    (17) exp -> . exp TkResta exp
    (18) exp -> . TkTrue
    (19) exp -> . TkFalse
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp
    (7) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkNum           shift and go to state 26
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 37
    exp_un                         shift and go to state 29

state 10

    (33) instruccion -> TkFor . TkIdent TkFrom exp TkTo exp TkDo instlist TkDone

    TkIdent         shift and go to state 38


state 11

    (50) instlist -> instruccion .

    TkDone          reduce using rule 50 (instlist -> instruccion .)
    TkPuntoYComa    reduce using rule 50 (instlist -> instruccion .)
    TkElse          reduce using rule 50 (instlist -> instruccion .)


state 12

    (2) programa -> TkExecute instlist . TkDone
    (49) instlist -> instlist . semicoloninst
    (51) semicoloninst -> . TkPuntoYComa instruccion

    TkDone          shift and go to state 41
    TkPuntoYComa    shift and go to state 39

    semicoloninst                  shift and go to state 40

state 13

    (37) instruccion -> TkExecute . instlist TkDone
    (49) instlist -> . instlist semicoloninst
    (50) instlist -> . instruccion
    (29) instruccion -> . TkIdent TkAsignacion exp
    (30) instruccion -> . TkRead exp
    (31) instruccion -> . TkWrite exp
    (32) instruccion -> . TkWhile exp TkDo instlist TkDone
    (33) instruccion -> . TkFor TkIdent TkFrom exp TkTo exp TkDo instlist TkDone
    (34) instruccion -> . TkIf exp TkThen instlist TkDone
    (35) instruccion -> . TkIf exp TkThen instlist TkElse instlist TkDone
    (36) instruccion -> . declaracion TkExecute instlist TkDone
    (37) instruccion -> . TkExecute instlist TkDone
    (38) instruccion -> . TkLlaveAbre lista_tape TkLlaveCierra TkAt ident_tape
    (52) declaracion -> . TkDeclare declist

    TkIdent         shift and go to state 8
    TkRead          shift and go to state 7
    TkWrite         shift and go to state 15
    TkWhile         shift and go to state 9
    TkFor           shift and go to state 10
    TkIf            shift and go to state 6
    TkExecute       shift and go to state 13
    TkLlaveAbre     shift and go to state 14
    TkDeclare       shift and go to state 4

    instruccion                    shift and go to state 11
    instlist                       shift and go to state 42
    declaracion                    shift and go to state 16

state 14

    (38) instruccion -> TkLlaveAbre . lista_tape TkLlaveCierra TkAt ident_tape
    (41) lista_tape -> . lista_tape simb_tape
    (42) lista_tape -> . simb_tape
    (43) simb_tape -> . TkPunto
    (44) simb_tape -> . TkMayor
    (45) simb_tape -> . TkMenor
    (46) simb_tape -> . TkMas
    (47) simb_tape -> . TkResta
    (48) simb_tape -> . TkComa

    TkPunto         shift and go to state 44
    TkMayor         shift and go to state 46
    TkMenor         shift and go to state 47
    TkMas           shift and go to state 49
    TkResta         shift and go to state 43
    TkComa          shift and go to state 45

    simb_tape                      shift and go to state 48
    lista_tape                     shift and go to state 50

state 15

    (31) instruccion -> TkWrite . exp
    (8) exp -> . term
    (9) exp -> . exp_un
    (10) exp -> . TkParAbre exp TkParCierra
    (11) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (12) exp -> . TkLlaveAbre exp TkLlaveCierra
    (13) exp -> . exp TkMas exp
    (14) exp -> . exp TkMult exp
    (15) exp -> . exp TkMod exp
    (16) exp -> . exp TkDiv exp
    (17) exp -> . exp TkResta exp
    (18) exp -> . TkTrue
    (19) exp -> . TkFalse
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp
    (7) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkNum           shift and go to state 26
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 51
    exp_un                         shift and go to state 29

state 16

    (36) instruccion -> declaracion . TkExecute instlist TkDone

    TkExecute       shift and go to state 52


state 17

    (52) declaracion -> TkDeclare declist .

    TkExecute       reduce using rule 52 (declaracion -> TkDeclare declist .)


state 18

    (55) dec -> varlist . TkType tipo

    TkType          shift and go to state 53


state 19

    (56) varlist -> TkIdent . TkComa varlist
    (57) varlist -> TkIdent .

    TkComa          shift and go to state 54
    TkType          reduce using rule 57 (varlist -> TkIdent .)


state 20

    (53) declist -> dec . TkPuntoYComa declist
    (54) declist -> dec .

    TkPuntoYComa    shift and go to state 55
    TkExecute       reduce using rule 54 (declist -> dec .)


state 21

    (1) programa -> declaracion TkExecute instlist . TkDone
    (49) instlist -> instlist . semicoloninst
    (51) semicoloninst -> . TkPuntoYComa instruccion

    TkDone          shift and go to state 56
    TkPuntoYComa    shift and go to state 39

    semicoloninst                  shift and go to state 40

state 22

    (5) exp_un -> TkResta . exp
    (8) exp -> . term
    (9) exp -> . exp_un
    (10) exp -> . TkParAbre exp TkParCierra
    (11) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (12) exp -> . TkLlaveAbre exp TkLlaveCierra
    (13) exp -> . exp TkMas exp
    (14) exp -> . exp TkMult exp
    (15) exp -> . exp TkMod exp
    (16) exp -> . exp TkDiv exp
    (17) exp -> . exp TkResta exp
    (18) exp -> . TkTrue
    (19) exp -> . TkFalse
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp
    (7) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkNum           shift and go to state 26
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 57
    exp_un                         shift and go to state 29

state 23

    (18) exp -> TkTrue .

    TkMas           reduce using rule 18 (exp -> TkTrue .)
    TkMult          reduce using rule 18 (exp -> TkTrue .)
    TkMod           reduce using rule 18 (exp -> TkTrue .)
    TkDiv           reduce using rule 18 (exp -> TkTrue .)
    TkResta         reduce using rule 18 (exp -> TkTrue .)
    TkIgual         reduce using rule 18 (exp -> TkTrue .)
    TkDesigual      reduce using rule 18 (exp -> TkTrue .)
    TkMenor         reduce using rule 18 (exp -> TkTrue .)
    TkMayor         reduce using rule 18 (exp -> TkTrue .)
    TkMenorIgual    reduce using rule 18 (exp -> TkTrue .)
    TkMayorIgual    reduce using rule 18 (exp -> TkTrue .)
    TkDisyuncion    reduce using rule 18 (exp -> TkTrue .)
    TkConjuncion    reduce using rule 18 (exp -> TkTrue .)
    TkConcat        reduce using rule 18 (exp -> TkTrue .)
    TkThen          reduce using rule 18 (exp -> TkTrue .)
    TkDone          reduce using rule 18 (exp -> TkTrue .)
    TkPuntoYComa    reduce using rule 18 (exp -> TkTrue .)
    TkElse          reduce using rule 18 (exp -> TkTrue .)
    TkDo            reduce using rule 18 (exp -> TkTrue .)
    TkParCierra     reduce using rule 18 (exp -> TkTrue .)
    TkLlaveCierra   reduce using rule 18 (exp -> TkTrue .)
    TkCorcheteCierra reduce using rule 18 (exp -> TkTrue .)
    TkTo            reduce using rule 18 (exp -> TkTrue .)


state 24

    (6) exp_un -> TkNegacion . exp
    (8) exp -> . term
    (9) exp -> . exp_un
    (10) exp -> . TkParAbre exp TkParCierra
    (11) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (12) exp -> . TkLlaveAbre exp TkLlaveCierra
    (13) exp -> . exp TkMas exp
    (14) exp -> . exp TkMult exp
    (15) exp -> . exp TkMod exp
    (16) exp -> . exp TkDiv exp
    (17) exp -> . exp TkResta exp
    (18) exp -> . TkTrue
    (19) exp -> . TkFalse
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp
    (7) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkNum           shift and go to state 26
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 58
    exp_un                         shift and go to state 29

state 25

    (19) exp -> TkFalse .

    TkMas           reduce using rule 19 (exp -> TkFalse .)
    TkMult          reduce using rule 19 (exp -> TkFalse .)
    TkMod           reduce using rule 19 (exp -> TkFalse .)
    TkDiv           reduce using rule 19 (exp -> TkFalse .)
    TkResta         reduce using rule 19 (exp -> TkFalse .)
    TkIgual         reduce using rule 19 (exp -> TkFalse .)
    TkDesigual      reduce using rule 19 (exp -> TkFalse .)
    TkMenor         reduce using rule 19 (exp -> TkFalse .)
    TkMayor         reduce using rule 19 (exp -> TkFalse .)
    TkMenorIgual    reduce using rule 19 (exp -> TkFalse .)
    TkMayorIgual    reduce using rule 19 (exp -> TkFalse .)
    TkDisyuncion    reduce using rule 19 (exp -> TkFalse .)
    TkConjuncion    reduce using rule 19 (exp -> TkFalse .)
    TkConcat        reduce using rule 19 (exp -> TkFalse .)
    TkThen          reduce using rule 19 (exp -> TkFalse .)
    TkDone          reduce using rule 19 (exp -> TkFalse .)
    TkPuntoYComa    reduce using rule 19 (exp -> TkFalse .)
    TkElse          reduce using rule 19 (exp -> TkFalse .)
    TkDo            reduce using rule 19 (exp -> TkFalse .)
    TkParCierra     reduce using rule 19 (exp -> TkFalse .)
    TkLlaveCierra   reduce using rule 19 (exp -> TkFalse .)
    TkCorcheteCierra reduce using rule 19 (exp -> TkFalse .)
    TkTo            reduce using rule 19 (exp -> TkFalse .)


state 26

    (3) term -> TkNum .

    TkMas           reduce using rule 3 (term -> TkNum .)
    TkMult          reduce using rule 3 (term -> TkNum .)
    TkMod           reduce using rule 3 (term -> TkNum .)
    TkDiv           reduce using rule 3 (term -> TkNum .)
    TkResta         reduce using rule 3 (term -> TkNum .)
    TkIgual         reduce using rule 3 (term -> TkNum .)
    TkDesigual      reduce using rule 3 (term -> TkNum .)
    TkMenor         reduce using rule 3 (term -> TkNum .)
    TkMayor         reduce using rule 3 (term -> TkNum .)
    TkMenorIgual    reduce using rule 3 (term -> TkNum .)
    TkMayorIgual    reduce using rule 3 (term -> TkNum .)
    TkDisyuncion    reduce using rule 3 (term -> TkNum .)
    TkConjuncion    reduce using rule 3 (term -> TkNum .)
    TkConcat        reduce using rule 3 (term -> TkNum .)
    TkThen          reduce using rule 3 (term -> TkNum .)
    TkDone          reduce using rule 3 (term -> TkNum .)
    TkPuntoYComa    reduce using rule 3 (term -> TkNum .)
    TkElse          reduce using rule 3 (term -> TkNum .)
    TkDo            reduce using rule 3 (term -> TkNum .)
    TkParCierra     reduce using rule 3 (term -> TkNum .)
    TkLlaveCierra   reduce using rule 3 (term -> TkNum .)
    TkCorcheteCierra reduce using rule 3 (term -> TkNum .)
    TkTo            reduce using rule 3 (term -> TkNum .)


state 27

    (10) exp -> TkParAbre . exp TkParCierra
    (8) exp -> . term
    (9) exp -> . exp_un
    (10) exp -> . TkParAbre exp TkParCierra
    (11) exp -> . TkCorcheteAbre exp TkCorcheteCierra
    (12) exp -> . TkLlaveAbre exp TkLlaveCierra
    (13) exp -> . exp TkMas exp
    (14) exp -> . exp TkMult exp
    (15) exp -> . exp TkMod exp
    (16) exp -> . exp TkDiv exp
    (17) exp -> . exp TkResta exp
    (18) exp -> . TkTrue
    (19) exp -> . TkFalse
    (20) exp -> . exp TkIgual exp
    (21) exp -> . exp TkDesigual exp
    (22) exp -> . exp TkMenor exp
    (23) exp -> . exp TkMayor exp
    (24) exp -> . exp TkMenorIgual exp
    (25) exp -> . exp TkMayorIgual exp
    (26) exp -> . exp TkDisyuncion exp
    (27) exp -> . exp TkConjuncion exp
    (28) exp -> . exp TkConcat exp
    (3) term -> . TkNum
    (4) term -> . TkIdent
    (5) exp_un -> . TkResta exp
    (6) exp_un -> . TkNegacion exp
    (7) exp_un -> . TkInspeccion exp

    TkParAbre       shift and go to state 27
    TkCorcheteAbre  shift and go to state 33
    TkLlaveAbre     shift and go to state 31
    TkTrue          shift and go to state 23
    TkFalse         shift and go to state 25
    TkNum           shift and go to state 26
    TkIdent         shift and go to state 28
    TkResta         shift and go to state 22
    TkNegacion      shift and go to state 24
    TkInspeccion    shift and go to state 34

    term                           shift and go to state 30
    exp                            shift and go to state 59
    exp_un                         shift and go to state 29

state 28

    (4) term -> TkIdent .

    TkMas           reduce using rule 4 (term -> TkIdent .)
    TkMult          reduce using rule 4 (term -> TkIdent .)
    TkMod           reduce using rule 4 (term -> TkIdent .)
    TkDiv           reduce using rule 4 (term -> TkIdent .)
    TkResta         reduce using rule 4 (term -> TkIdent .)
    TkIgual         reduce using rule 4 (term -> TkIdent .)
    TkDesigual      reduce using rule 4 (term -> TkIdent .)
    TkMenor         reduce using rule 4 (term -> TkIdent .)
    TkMayor         reduce using rule 4 (term -> TkIdent .)
    TkMenorIgual    reduce using rule 4 (term -> TkIdent .)
    TkMayorIgual    reduce using rule 4 (term -> TkIdent .)
    TkDisyuncion    reduce using rule 4 (term -> TkIdent .)
    TkConjuncion    reduce using rule 4 (term -> TkIdent .)
    TkConcat        reduce using rule 4 (term -> TkIdent .)
    TkThen          reduce using rule 4 (term -> TkIdent .)
    TkDone          reduce using rule 4 (term -> TkIdent .)
    TkPuntoYComa    reduce using rule 4 (term -> TkIdent .)
    TkElse          reduce using rule 4 (term -> TkIdent .)
    TkDo            reduce using rule 4 (term -> TkIdent .)
    TkParCierra     reduce using rule 4 (term -> TkIdent .)
    TkLlaveCierra   reduce using rule 4 (term -> TkIdent .)
    TkCorcheteCierra reduce using rule 4 (term -> TkIdent .)
    TkTo            reduce using rule 4 (term -> TkIdent .)


state 29

    (9) exp -> exp_un .

    TkMas           reduce using rule 9 (exp -> exp_un .)
    TkMult          reduce using rule 9 (exp -> exp_un .)
    TkMod           reduce using rule 9 (exp -> exp_un .)
    TkDiv           reduce using rule 9 (exp -> exp_un .)
    TkResta         reduce using rule 9 (exp -> exp_un .)
    TkIgual         reduce using rule 9 (exp -> exp_un .)
    TkDesigual      reduce using rule 9 (exp -> exp_un .)
    TkMenor         reduce using rule 9 (exp -> exp_un .)
    TkMayor         reduce using rule 9 (exp -> exp_un .)
    TkMenorIgual    reduce using rule 9 (exp -> exp_un .)
    TkMayorIgual    reduce using rule 9 (exp -> exp_un .)
    TkDisyuncion    reduce using rule 9 (exp -> exp_un .)
    TkConjuncion    reduce using rule 9 (exp -> exp_un .)
    TkConcat        reduce using rule 9 (exp -> exp_un .)
    TkThen          reduce using rule 9 (exp -> exp_un .)
    TkDone          reduce using rule 9 (exp -> exp_un .)
    TkPuntoYComa    reduce using rule 9 (exp -> exp_un .)
    TkElse          reduce using rule 9 (exp -> exp_un .)
    TkDo            reduce using rule 9 (exp -> exp_un .)
    TkParCierra     reduce using rule 9 (exp -> exp_un .)
    TkLlaveCierra   reduce using rule 9 (exp -> exp_un .)
    TkCorcheteCierra reduce using rule 9 (exp -> exp_un .)
    TkTo            reduce using rule 9 (exp -> exp_un .)


state 30

    (8) exp -> term .
